Práctica 2 - Detección de Anomalías Terminada

--- a/Tareas/Práctica 2/Práctica 2 - Anomalías y Reducción Dims.ipynb
+++ b/Tareas/Práctica 2/Práctica 2 - Anomalías y Reducción Dims.ipynb
@@ -31,39 +31,71 @@
     "\r\n",
     "## Detección de Anomalías\r\n",
     "\r\n",
-    "1. Usando el dataset de estaturas aplicar detección de anomalías\r\n",
+    "Usando el dataset de estaturas aplicar detección de anomalías\r\n",
     "\r\n",
-    "    a. Usar como training-set la primera pestaña de \"normales\" (y = 0 o sin anomalías)\r\n",
+    "a. Usar como training-set la primera pestaña de \"normales\" (y = 0 o sin anomalías)\r\n",
     "\r\n",
-    "    b. La segunda pestaña \"valtest(normales)\" contiene datos normales (y = 0 / sin anomalías)\r\n",
+    "b. La segunda pestaña \"valtest(normales)\" contiene datos normales (y = 0 / sin anomalías)\r\n",
     "\r\n",
-    "        - Usar la mitad para cross-validation\r\n",
-    "        - Usar la mitad para testing\r\n",
+    "- Usar la mitad para cross-validation\r\n",
+    "- Usar la mitad para testing\r\n",
     "\r\n",
-    "    c. La tercera pestaña \"valtest(anomalías)\" contiene anomalías (y = 1)\r\n",
+    "c. La tercera pestaña \"valtest(anomalías)\" contiene anomalías (y = 1)\r\n",
     "\r\n",
-    "        - Usar la mitad para cross-validation\r\n",
-    "        - Usar la mitad para testing\r\n"
+    "- Usar la mitad para cross-validation\r\n",
+    "- Usar la mitad para testing\r\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "source": [
     "import pandas as pd \r\n",
     "import numpy as np \r\n",
     "import random\r\n",
-    "from scipy.spatial.distance import cdist\r\n",
+    "from scipy.stats import norm\r\n",
     "import random\r\n",
-    "import matplotlib.pyplot as plt \r\n",
-    "from celluloid import Camera\r\n",
+    "import matplotlib.pyplot as plt\r\n",
     "\r\n",
     "# Se cargan los datos de \"estaturas.xlsx\"\r\n",
     "dfs = pd.read_excel(\"estaturas.xlsx\", sheet_name = None)\r\n",
     "\r\n",
     "# Se obtienen los datos de \"entrenamiento\"\r\n",
-    "train_data = dfs[\"normales\"]"
+    "train_data = dfs[\"normales\"]\r\n",
+    "\r\n",
+    "# Se obtienen los datos de prueba con y sin anomalías\r\n",
+    "valtest_data_pos = dfs[\"anomalias\"]\r\n",
+    "valtest_data_neg = dfs[\"valtest(normales)\"]\r\n",
+    "\r\n",
+    "# Se cambian los nombres de las columnas en los valores negativos\r\n",
+    "valtest_data_neg = valtest_data_neg.set_axis([\"Estatura\", \"Edad\"], axis=1)\r\n",
+    "\r\n",
+    "# Se \"shufflean\" las filas de los dos dataframes\r\n",
+    "valtest_data_pos = valtest_data_pos.sample(frac=1).reset_index(drop=True)\r\n",
+    "valtest_data_neg = valtest_data_neg.sample(frac=1).reset_index(drop=True)\r\n",
+    "\r\n",
+    "# La primera mitad de los valores se utilizan para validación\r\n",
+    "val_data_pos = valtest_data_pos.iloc[:len(valtest_data_pos)//2, :]\r\n",
+    "val_data_neg = valtest_data_neg.iloc[:len(valtest_data_neg)//2, :]\r\n",
+    "val_data = pd.concat([val_data_pos, val_data_neg])\r\n",
+    "\r\n",
+    "# La segunda mitad de los valores se utilizan para test\r\n",
+    "test_data_pos = valtest_data_pos.iloc[len(valtest_data_pos)//2 :, :]\r\n",
+    "test_data_neg = valtest_data_neg.iloc[len(valtest_data_neg)//2 :, :]\r\n",
+    "test_data = pd.concat([test_data_pos, test_data_neg])\r\n",
+    "\r\n",
+    "# Arrays con los valores reales de \"atípico o no atípico\"\r\n",
+    "y_true = np.zeros((len(val_data), 1))\r\n",
+    "y_true[0:len(valtest_data_pos)//2] = 1\r\n",
+    "\r\n",
+    "# Se incluyen las columnas de labels \r\n",
+    "val_data = val_data.assign(Anomalia_True = y_true)\r\n",
+    "test_data = test_data.assign(Anomalia_True = y_true)\r\n",
+    "\r\n",
+    "# Se realiza una última \"shuffleada\" a los datos de prueba y validación\r\n",
+    "val_data = val_data.sample(frac=1).reset_index(drop=True)\r\n",
+    "test_data = test_data.sample(frac=1).reset_index(drop=True)"
    ],
    "outputs": [],
    "metadata": {}
@@ -71,14 +103,140 @@
   {
    "cell_type": "markdown",
    "source": [
-    "2. Los datos de cross-validation deben ser usados para selección de hyper-parámetros (por ejemplo, el umbral epsilon) y/o selección de transformaciones a aplicar a las variables\r\n",
+    "Creación de una función de distribución de probabilidad a partir de los datos de entrenamiento, así como una función que retorna la probabilidad de una observación utilizando la media y desviación estándar de dicha distribución. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "# Entrenamiento de modelo (extracción de media y covarianza)\r\n",
+    "def createDistribution(data):\r\n",
     "\r\n",
-    "3. Usar los datos de testing para reportar las métricas de evaluación apropiadas\r\n",
+    "    # Vector de medias (Dims: 1 x NoVars)\r\n",
+    "    mu = np.mean(data, axis=0).to_numpy()\r\n",
     "\r\n",
-    "4. Es permitido usar librerías estadísticas (por ejemplo scipy.stats) para cosas como:\r\n",
+    "    # Matriz de covarianzas (Dims: NoVars x NoVars)\r\n",
+    "    sigma = np.cov(data.T)\r\n",
     "\r\n",
-    "    - Estimación de parámetros (función de densidad)\r\n",
-    "    - Cálculo de densidades y/o probabilidades con la función de densidad estimada"
+    "    return mu, sigma\r\n",
+    "\r\n",
+    "# Función que retorna la probabilidad correspondiente a una muestra\r\n",
+    "def predictDistribution(mu, sigma, data):\r\n",
+    "\r\n",
+    "    from scipy.stats import multivariate_normal\r\n",
+    "\r\n",
+    "    dist = multivariate_normal(mean = mu, cov = sigma)\r\n",
+    "\r\n",
+    "    return dist.pdf(data)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Se entrena (crea una distribución normal multidimensional) un modelo utilizando la función creada y luego se realiza una predicción de la probabilidad de diferentes muestras propias del dataset de validación."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "# Se entrena el modelo\r\n",
+    "modelo = createDistribution(train_data)\r\n",
+    "\r\n",
+    "# Se generan predicciones o probabilidades utilizando el dataset de validación\r\n",
+    "probs = predictDistribution(modelo[0], modelo[1], val_data[[\"Estatura\", \"Edad\"]])\r\n",
+    "\r\n",
+    "# Se presentan los resultados\r\n",
+    "print(val_data.assign(Probabilidades = probs))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   Estatura   Edad  Anomalia_True  Probabilidades\n",
+      "0      0.25  43557            1.0        0.000000\n",
+      "1      1.60     31            0.0        0.060092\n",
+      "2      1.76     32            0.0        0.275183\n",
+      "3      0.15    250            1.0        0.000000\n",
+      "4      1.80     27            0.0        0.185247\n",
+      "5      1.82     30            0.0        0.162041\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Según los resultados anteriores, parece que un umbral adecuado para la clasificación sería un valor muy cercano a 0. Por lo tanto, tomando en cuenta que uno de los valores \"no atípicos\" parece contar con una probabilidad de 0.075, se utilizará un umbral con un valor menor a este número: 0.0005. Debido a que la clasificación es fácilmente conseguida utilizando un umbral simple, no se considera apropiado utilizar una transformación de ningún tipo."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "epsilon = 0.0005"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Se utiliza el umbral anterior para poder realizar la detección de valores atípicos en el dataset de prueba. Con los resultados obtenidos se calcula el F1 Score"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "# Se obtienen las probabilidades para cada observación de prueba\r\n",
+    "probs = predictDistribution(modelo[0], modelo[1], test_data[[\"Estatura\", \"Edad\"]])\r\n",
+    "\r\n",
+    "# Se detectan valores atípicos\r\n",
+    "preds = (probs < epsilon).astype(int)\r\n",
+    "\r\n",
+    "# Se guardan los resultados en un nuevo dataframe\r\n",
+    "results = test_data.assign(Anomalia_Pred = preds, Probabilidades = probs)\r\n",
+    "\r\n",
+    "# Se despliegan los resultados\r\n",
+    "print(results)\r\n",
+    "\r\n",
+    "# Se calcula el f1-score de las predicciones\r\n",
+    "from sklearn.metrics import f1_score\r\n",
+    "f1 = f1_score(results[\"Anomalia_True\"], results[\"Anomalia_Pred\"])\r\n",
+    "print(\"F1 Score:\", f1)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   Estatura   Edad  Anomalia_True  Anomalia_Pred  Probabilidades\n",
+      "0    150.00     14            1.0              1        0.000000\n",
+      "1      1.82     25            0.0              0        0.114253\n",
+      "2      1.61     31            0.0              0        0.075409\n",
+      "3      1.79     31            0.0              0        0.232738\n",
+      "4    175.10  43587            1.0              1        0.000000\n",
+      "5      1.60     35            0.0              0        0.038381\n",
+      "F1 Score: 1.0\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Dado que se obtuvo un F1 Score de 1, se considera que, al menos para el dataset limitado con el que se contaba, el modelo de detección de anomalías es exitoso. "
    ],
    "metadata": {}
   },
