Proyecto - Creación de Vector de Salida (y)
Se consiguió crear la forma final de los datos de salida de la red neuronal. Estos se almacenaron en una lista de tuplas, con cada elemento conteniendo información diferente: El primer elemento contiene los valores de salida de la red, el segundo el OHE de la dificultad y el último contiene las timestamps de cada paso.

--- a/Proyecto/DDC Revisited/Dance Dance Convolution - Revisited.ipynb
+++ b/Proyecto/DDC Revisited/Dance Dance Convolution - Revisited.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "source": [
     "# Dict for the path of all audio files\r\n",
     "audio_paths = defaultdict(dict)\r\n",
@@ -245,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "# Counter for songs successfully processed\r\n",
     "successfully_processed = 0\r\n",
     "\r\n",
     "# Dict to store the tag data for each song in the pack \r\n",
-    "dataset_tags = defaultdict(dict)\r\n",
+    "tag_data = defaultdict(dict)\r\n",
     "\r\n",
     "# For every pack and song in the dataset\r\n",
     "for pack_name in pack_data.keys():\r\n",
@@ -274,13 +274,13 @@
     "            stepfile_txt = stepfile.read()\r\n",
     "            \r\n",
     "        # The text of each song is parsed and turned into a dict of tags\r\n",
-    "        dataset_tags[pack_name][song_name] = stepfile_parser(stepfile_txt)\r\n",
+    "        tag_data[pack_name][song_name] = stepfile_parser(stepfile_txt)\r\n",
     "\r\n",
     "        # Required tags\r\n",
     "        required_tags = ['offset', 'bpms', 'notes']\r\n",
     "\r\n",
     "        # Current song tags\r\n",
-    "        current_tags = list(dataset_tags[pack_name][song_name].keys())\r\n",
+    "        current_tags = list(tag_data[pack_name][song_name].keys())\r\n",
     "\r\n",
     "        # Check if resulting dictionary keys contain all the required tags\r\n",
     "        if not all((item in current_tags) for item in required_tags):\r\n",
@@ -290,6 +290,12 @@
     "        else:\r\n",
     "            successfully_processed += 1\r\n",
     "\r\n",
+    "\r\n",
+    "# Tag data is saved to a pickle file\r\n",
+    "with open('tag_data.pickle', 'wb') as handle:\r\n",
+    "    pickle.dump(tag_data, handle, protocol=pickle.HIGHEST_PROTOCOL)\r\n",
+    "    print(\"Tag data successfully saved.\")\r\n",
+    "\r\n",
     "# Successful files\r\n",
     "print(f\"Number of succesfully processed songs: {successfully_processed} / {songs_encountered}\")"
    ],
@@ -298,12 +304,12 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Fraxtil's Arrow Arrangements: 100%|██████████| 20/20 [00:15<00:00,  1.29it/s]\n",
-      "Fraxtil's Beast Beats: 100%|██████████| 20/20 [00:14<00:00,  1.39it/s]\n",
-      "In The Groove: 100%|██████████| 67/67 [00:34<00:00,  1.94it/s]\n",
-      "In The Groove 2: 100%|██████████| 66/66 [00:30<00:00,  2.20it/s]\n",
-      "KDA - ALL OUT: 100%|██████████| 7/7 [00:02<00:00,  2.48it/s]\n",
-      "Tsunamix III: 100%|██████████| 50/50 [00:12<00:00,  4.05it/s]"
+      "Fraxtil's Arrow Arrangements: 100%|██████████| 20/20 [00:17<00:00,  1.17it/s]\n",
+      "Fraxtil's Beast Beats: 100%|██████████| 20/20 [00:17<00:00,  1.16it/s]\n",
+      "In The Groove: 100%|██████████| 67/67 [00:47<00:00,  1.43it/s]\n",
+      "In The Groove 2: 100%|██████████| 66/66 [00:36<00:00,  1.82it/s]\n",
+      "KDA - ALL OUT: 100%|██████████| 7/7 [00:03<00:00,  2.32it/s]\n",
+      "Tsunamix III: 100%|██████████| 50/50 [00:13<00:00,  3.72it/s]\n"
      ]
     },
     {
@@ -312,12 +318,32 @@
      "text": [
       "Number of succesfully processed songs: 230 / 230\n"
      ]
-    },
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Alternative: Load Tag Data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "# Load the tag data (deserialize)\r\n",
+    "with open('tag_data.pickle', 'rb') as file:\r\n",
+    "    tag_data = pickle.load(file)\r\n",
+    "    print(\"Tag data succesfully loaded.\")"
+   ],
+   "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "\n"
+      "Tag data succesfully loaded.\n"
      ]
     }
    ],
@@ -332,17 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
     "# Dictionary to store the processed data\r\n",
     "measure_data = defaultdict(dict)\r\n",
     "\r\n",
     "# For every pack and song in the dataset\r\n",
-    "for pack_name in dataset_tags.keys():\r\n",
-    "    for song_name in dataset_tags[pack_name].keys(): \r\n",
+    "for pack_name in tag_data.keys():\r\n",
+    "    for song_name in tag_data[pack_name].keys(): \r\n",
     "\r\n",
     "        # We store the post-processed measures\r\n",
-    "        measure_data[pack_name][song_name] = add_measure_timestamps(dataset_tags[pack_name][song_name])"
+    "        measure_data[pack_name][song_name] = add_measure_timestamps(tag_data[pack_name][song_name])"
    ],
    "outputs": [],
    "metadata": {}
@@ -358,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "# Dict for all spectrogram data (all songs)\r\n",
     "audio_data = defaultdict(dict)\r\n",
     "\r\n",
     "# For every pack and song in the dataset\r\n",
-    "for pack_name in dataset_tags.keys():\r\n",
+    "for pack_name in tag_data.keys():\r\n",
     "\r\n",
     "    # We use \"file=sys.stdout\" to make the output nicer\r\n",
-    "    for song_name in tqdm(dataset_tags[pack_name].keys(), desc=f\"{pack_name}\", file=sys.stdout): \r\n",
+    "    for song_name in tqdm(tag_data[pack_name].keys(), desc=f\"{pack_name}\", file=sys.stdout): \r\n",
     "\r\n",
     "        # ===================\r\n",
     "        # LOADING AUDIO\r\n",
@@ -445,31 +471,13 @@
     "with open('audio_data.pickle', 'wb') as handle:\r\n",
     "    pickle.dump(audio_data, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Fraxtil's Arrow Arrangements: 100%|██████████| 20/20 [03:06<00:00,  9.31s/it]\n",
-      "Fraxtil's Beast Beats: 100%|██████████| 20/20 [02:52<00:00,  8.60s/it]\n",
-      "In The Groove:  85%|████████▌ | 57/67 [10:09<01:34,  9.47s/it]Spectrogram with a higher dimensionality found. Slicing to match the remaining sequences.\n",
-      "In The Groove: 100%|██████████| 67/67 [11:38<00:00, 10.43s/it]\n",
-      "In The Groove 2:  15%|█▌        | 10/66 [01:20<07:27,  7.99s/it]Spectrogram with a higher dimensionality found. Slicing to match the remaining sequences.\n",
-      "In The Groove 2:  39%|███▉      | 26/66 [03:24<04:54,  7.37s/it]Spectrogram with a higher dimensionality found. Slicing to match the remaining sequences.\n",
-      "In The Groove 2: 100%|██████████| 66/66 [08:44<00:00,  7.94s/it]\n",
-      "KDA - ALL OUT: 100%|██████████| 7/7 [00:57<00:00,  8.26s/it]\n",
-      "Tsunamix III:  60%|██████    | 30/50 [04:06<02:52,  8.64s/it]Spectrogram with a higher dimensionality found. Slicing to match the remaining sequences.\n",
-      "Tsunamix III:  66%|██████▌   | 33/50 [04:29<02:15,  7.95s/it]Spectrogram with a higher dimensionality found. Slicing to match the remaining sequences.\n",
-      "Tsunamix III: 100%|██████████| 50/50 [07:17<00:00,  8.76s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Load Audio Data (Alternative)\r\n",
+    "## Alternative: Load Audio Data\r\n",
     "\r\n",
     "If the audio data generation was run before, the user can re-load all the previously processed assets."
    ],
@@ -477,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "# Load the audio data (deserialize)\r\n",
     "with open('audio_data.pickle', 'rb') as file:\r\n",
@@ -495,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "source": [
     "# RemoveS excesive notifications from WandB during training\r\n",
     "logger = logging.getLogger(\"wandb\")\r\n",
@@ -513,7 +521,135 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Data Expansion\r\n",
+    "## Dataset Creation and Augmentation\r\n",
+    "\r\n",
+    "The spectrogram data is used to create the input of the neural network ($X$), while the step data is used to generate the output data ($y$). The data is doubled (augmented) by flipping horizontally all steps. This is a suitable \"augmentation\" as it does not destroy the underlying patterns in the songs. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\r\n",
+    "\r\n",
+    "# ======================\r\n",
+    "# STEP CLASS ENCODING\r\n",
+    "# ======================\r\n",
+    "\r\n",
+    "# There are 9 different types of step. We encode for each one:\r\n",
+    "# 0 - No Note\r\n",
+    "# 1 - Normal Note\r\n",
+    "# 2 - Hold Head\r\n",
+    "# 3 - Hold/Roll Tail\r\n",
+    "# 4 - Roll Head\r\n",
+    "# M - Mine (or \"bad\" note)\r\n",
+    "# K - Automatic keysound\r\n",
+    "# L - Lift note\r\n",
+    "# F - Fake note\r\n",
+    "num_step_classes = 9\r\n",
+    "\r\n",
+    "# One hot encoder fit for detecting the 9 step classes\r\n",
+    "OHEnc_step = OneHotEncoder(handle_unknown='ignore')\r\n",
+    "OHEnc_step.fit(np.reshape(np.arange(0, num_step_classes), (-1,1)))\r\n",
+    "\r\n",
+    "# One hot encoder for the difficulty\r\n",
+    "difficulties = np.array([\"Beginner\", \"Easy\", \"Medium\", \"Hard\", \"Challenge\", \"Edit\"])\r\n",
+    "OHEnc_diff = OneHotEncoder(handle_unknown='ignore')\r\n",
+    "OHEnc_diff.fit(np.reshape(difficulties, (-1,1)))\r\n",
+    "\r\n",
+    "# Empty lists for the inputs and outputs\r\n",
+    "X_data = []\r\n",
+    "y_data = []\r\n",
+    "\r\n",
+    "# Iterate once again over every pack and song\r\n",
+    "# We use \"file=sys.stdout\" to make the output nicer\r\n",
+    "for pack in tag_data.keys():\r\n",
+    "    for song in tqdm(tag_data[pack].keys(), desc=f\"{pack}\", file=sys.stdout): \r\n",
+    "\r\n",
+    "        # =======================\r\n",
+    "        # MEASURE DATA (OUTPUT)\r\n",
+    "        # =======================\r\n",
+    "\r\n",
+    "        # For every difficulty that uses a single pad\r\n",
+    "        for difficulty in measure_data[pack][song][\"dance-single\"].keys():\r\n",
+    "\r\n",
+    "            # One hot encoding of the difficulty\r\n",
+    "            difficulty_enc = OHEnc_diff.transform(np.array([[difficulty]])).toarray()\r\n",
+    "            \r\n",
+    "            # Extract the current difficulty chart\r\n",
+    "            chart = measure_data[pack][song][\"dance-single\"][difficulty]\r\n",
+    "\r\n",
+    "            # Timestamp values for timing chart steps\r\n",
+    "            step_timestamps = chart[:,4]\r\n",
+    "\r\n",
+    "            # P(Step): Probability of a step occurring\r\n",
+    "            P_step = 1*np.any(chart[:,0:4], axis=1, keepdims=True)\r\n",
+    "\r\n",
+    "            # BPM: BPM value during each step\r\n",
+    "            BPM_step = np.reshape(chart[:,5], (-1, 1))\r\n",
+    "\r\n",
+    "            # Probability of step class ocurring for each step direction \r\n",
+    "            # - P(Left)  : Multiclass probability of a left step occurring\r\n",
+    "            # - P(Down)  : Multiclass probability of a down step occurring\r\n",
+    "            # - P(Up)    : Multiclass probability of a up step occurring\r\n",
+    "            # - P(Right) : Multiclass probability of a right step occurring\r\n",
+    "            P_left  = OHEnc_step.transform(np.reshape(chart[:,0], (-1, 1))).toarray()\r\n",
+    "            P_down  = OHEnc_step.transform(np.reshape(chart[:,1], (-1, 1))).toarray()\r\n",
+    "            P_up    = OHEnc_step.transform(np.reshape(chart[:,2], (-1, 1))).toarray()\r\n",
+    "            P_right = OHEnc_step.transform(np.reshape(chart[:,3], (-1, 1))).toarray()\r\n",
+    "\r\n",
+    "            # Concatenation of the previous parts to form the output of the \r\n",
+    "            # neural network for a \"singles\" song chart.\r\n",
+    "            output_nn = np.hstack((P_step, BPM_step, P_left, P_down, P_up, P_right))\r\n",
+    "\r\n",
+    "            # Output tuple: \r\n",
+    "            # - Chart data with the shape of the output of the neural net\r\n",
+    "            # - Difficulty one hot encoded (to condition the output)\r\n",
+    "            # - The step timestamps for timing each step\r\n",
+    "            y_data.append((output_nn, difficulty_enc, step_timestamps))\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fraxtil's Arrow Arrangements: 100%|██████████| 20/20 [00:00<00:00, 48.56it/s]\n",
+      "Fraxtil's Beast Beats: 100%|██████████| 20/20 [00:00<00:00, 54.42it/s]\n",
+      "In The Groove: 100%|██████████| 67/67 [00:00<00:00, 70.39it/s]\n",
+      "In The Groove 2: 100%|██████████| 66/66 [00:00<00:00, 72.69it/s]\n",
+      "KDA - ALL OUT: 100%|██████████| 7/7 [00:00<00:00, 76.19it/s]\n",
+      "Tsunamix III: 100%|██████████| 50/50 [00:00<00:00, 74.07it/s]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "source": [
+    "len(y_data)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1148"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Data Augmentation\r\n",
     "\r\n",
     "Charts can be flipped horizontally (mirrored) and their choreography will not be altered in any way. To add aditional training samples we flip all charts."
    ],
@@ -553,8 +689,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "source": [
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(1412, 38)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
-   "source": [],
+   "source": [
+    "class TimeSliceGenerator(keras.utils.Sequence):\r\n",
+    "\r\n",
+    "    def __init__(self, X_data, y_data, batch_size=32, shuffle=True):\r\n",
+    "        pass\r\n",
+    "\r\n",
+    "    def on_epoch_end(self):\r\n",
+    "        pass\r\n",
+    "\r\n",
+    "    def __getitem__(self, index):\r\n",
+    "        pass\r\n",
+    "\r\n",
+    "    def __len__(self):\r\n",
+    "        return self.n // self.batch_size"
+   ],
    "outputs": [],
    "metadata": {}
   },
